# TwitchChatBot

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md
chatbot/: Cargo.toml
chatbot/src/: app_config.rs  chat_bot.rs  main.rs  proxies.rs
chatbot/src/command_handler/: mod.rs  static_string.rs
chatbot/src/connect/: command.rs  error.rs  event.rs  event_content.rs  mod.rs  text_message.rs
chatbot/src/connect/connector/: mod.rs
chatbot/src/connect/connector/twitch_chat/: auth.rs  connector.rs  mod.rs  receive.rs  retry_manager.rs  send.rs
chatbot/src/connect/connector/twitch_chat/receive/: event.rs  handler.rs
chatbot/src/connect/connector/twitch_chat/send/: generator.rs  handler.rs  task.rs
chatbot/src/connect/twitch_chat/: auth.rs  connector.rs  event.rs  mod.rs  parsing.rs  request.rs  sending.rs
chatbot/src/connect/twitch_chat/parsing/: mod.rs  ping_message.rs  twitch_chat_message.rs  user_message.rs
chatbot/src/connect/twitch_chat/receive/: event.rs  handler.rs  mod.rs
chatbot/src/connect/twitch_chat/send/: generator.rs  handler.rs  mod.rs
chatbot/src/connect/types/: command.rs  event.rs  mod.rs  text_message.rs  user_info.rs
chatbot/src/connector/twitch_chat/: error.rs  mod.rs  parsing.rs
chatbot/src/core/: bot.rs  command.rs  mod.rs
chatbot/src/handle/: mod.rs  static_string.rs  string_interpolation.rs
src/: main.rs
src/connect/: error.rs  mod.rs
src/connect/connector/: mod.rs
src/connect/connector/twitch_chat/: auth.rs  mod.rs  retry_manager.rs  send.rs
src/connect/types/: command.rs  event.rs  mod.rs  text_message.rs  user_info.rs
src/core/: bot.rs
