[package]
name = "chatbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.24.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1.0.68"
tiny_http = { version = "0.9.0", features = ["ssl"] }
thiserror = "1.0"
dotenv = "0.15"
uuid = { version = "0.8", features = ["v4"] }
thread_timer = "0.3"
kv = "0.22.0"
futures-retry = "0.6.0"
tokio-tungstenite = "0.16.1"
futures-util = "0.3.18"
futures = "0.3.18"
flexi_logger = "0.22.0"
log = "0.4.14"
async-trait = "0.1.52"
