[package]
name = "chatbot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.24.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1.0.68"
tiny_http = { version = "0.9.0", features = ["ssl"] }
thiserror = "1.0"